--- a/src/layouts/styles/UserHeader.css
+++ b/src/layouts/styles/UserHeader.css
@@ -1,4 +1,5 @@
 .header {
+    position: relative;
     color: #fff;
     margin-bottom: 2rem;
 }
@@ -8,4 +9,78 @@
     color: #fff;
     font-weight: bold;
     padding: 10px;
+}
+.modal {
+    z-index: 5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.modal .inner {
+    display: flex;
+    flex-direction: column;
+
+    background-color: #2c3e50;
+    color: #fff;
+
+    padding: 15px;
+    border-radius: 3px;
+}
+.modal .form {
+    display: flex;
+    flex-direction: column;
+    padding: 0 25px 25px;
+}
+.modal .inner label {
+    font-size: 1.1rem;
+    font-weight: 200;
+    text-align: start;
+    margin-bottom: 3px;
+}
+.modal .inner input:not([type="submit"]) {
+    height: 30px;
+    width: 250px;
+    margin-bottom: 20px;
+    padding: 0 15px;
+}
+.modal .inner input[type="submit"] {
+    border-color: #00bc77;
+    background-color: #00bc77;
+    color: #fff;
+    font-weight: bold;
+    padding: 10px;
+    font-size: 1rem;
+    cursor: pointer;
+}
+.close-wrapper {
+    display: flex;
+    flex-direction: row-reverse;
+}
+.close {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 25px;
+    aspect-ratio: 1;
+    cursor: pointer;
+}
+.close span {
+    position: absolute;
+    display: block;
+    height: 2px;
+    width: 80%;
+    background-color: #fff;
+    transform: rotateZ(-45deg);
+    transform-origin: center center;
+    border-radius: 5px;
+}
+.close span:nth-child(1) {
+    transform: rotateZ(45deg)
 }
